graphql-parser/tests/snapshots/tests__parse_schema__scalar_type__win.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Type(
                Scalar(
                    ScalarType {
                        position: Pos(2:1),
                        description: Some(
                            "This is the best scalar type",
                        ),
                        name: "BestType",
                        directives: [
                            Directive {
                                position: Pos(2:17),
                                name: "perfectness",
                                arguments: [
                                    (
                                        "value",
                                        Int(
                                            Number(
                                                100500,
                                            ),
                                        ),
                                    ),
                                ],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
